2007-12-23 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuItem.m: Add KVB for enable.
	* Source/NSPopUpButton.m: Add KVB for selectedIndex.

2007-12-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-visibleRect:, -setHidden:, -hitTest:): Full
	support for hidding. 
	* Source/NSWindow.m (-_checkCursorRectangles:forEvent:,
	-_checkTrackingRectangles:forEvent:): Ignore hidden views.

2007-12-19 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gopen.m: slight tidyup, improve comments,no functional changes.
	* Documentation/gopen.1: correct the derscription of the -a option to
	say that this opens the specified application when used without a
	file to open.

2007-12-17  Adam Fedor  <fedor@gnu.org>

	* Tools/GNUmakefile, configure.ac: Don't try to run make_services if
	we are cross-compiling.

2007-12-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-setDataSource:): Make the data source
	method tableView:objectValueForTableColumn:row: optional.
	* Source/externs.m: Define some arbitray values for KVB markers.

2007-12-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSControl.m (-bind:...options:): Correct value binding.
	* Source/NSImage.m (+imageNamed:): Don't release, autorelease the image.

2007-12-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextField.m: Move some KVB to NSControl, add binding
	for text colour.
	* Source/NSControl.m: Add some bindings from NSTextField plus
	NSValueBinding. 

2007-12-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSBindingHelpers.h,
	* Source/NSKeyValueBinding.m: Rewrote KVB to use separate binding class.
	* Source/NSTextField.m,
	* Source/NSView.m: Use it here.

2007-12-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSNibBindingConnector.m (-establishConnection): Swap
	destination and source.
	* Source/NSKeyValueBinding.m: Started rework.

2007-12-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSKeyValueBinding.m (GSBindingUnbindAll): Return if table
	doesn't exist.

2007-12-11 Fred Kiefer <FredKiefer@gmx.de>
